--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -9,7 +9,9 @@ after-login-command = []
 # You can use it to add commands that run after AeroSpace startup.
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = []
+after-startup-command = [
+  'exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
+]
 
 # Start AeroSpace at login
 start-at-login = true
@@ -57,12 +59,12 @@ automatically-unhide-macos-hidden-apps = false
 #                 See:
 #                 https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-    inner.horizontal = 10
-    inner.vertical =   10
-    outer.left =       10
+    inner.horizontal = 5
+    inner.vertical =   5 
+    outer.left =       5
     outer.bottom =     5
     outer.top =        5
-    outer.right =      10
+    outer.right =      5
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -119,6 +121,7 @@ automatically-unhide-macos-hidden-apps = false
 # APP shortcuts
 alt-b = 'exec-and-forget open -a /Applications/Google\ Chrome.app'
 alt-g = 'exec-and-forget open -a /Applications/ChatGPT.app'
+alt-o = 'exec-and-forget open -a /Applications/Obsidian.app'
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
     alt-1 = 'workspace 1'
     alt-2 = 'workspace 2'
