--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -10,7 +10,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
+  'exec-and-forget sh -lc "command -v borders >/dev/null && borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0 || true"'
 ]
 
 # Start AeroSpace at login
@@ -206,6 +206,8 @@ alt-o = 'exec-and-forget open -a /Applications/Obsidian.app'
     r = ['flatten-workspace-tree', 'mode main'] # reset layout
     f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
     backspace = ['close-all-windows-but-current', 'mode main']
+
+    b = ['exec-and-forget pkill -x borders', 'exec-and-forget sh -lc "borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0"', 'mode main']
 
     # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
     #s = ['layout sticky tiling', 'mode main']
